Fixed details alignment

--- a/src/styles.css
+++ b/src/styles.css
@@ -18,6 +18,7 @@ h1 {
   color: blueviolet;
   font-size: 50px;
   padding-top: 70px;
+  text-align: center;
 }
 h2 {
   color: #e94363;
@@ -84,4 +85,8 @@ li {
 #corf {
   font-size: 18px;
   color: blueviolet;
+}
+
+#details {
+  margin-left: -15px;
 }
